[package]
name = "piranha"
version = "0.1.0"
description = "Placeholder"
license = "MIT"
homepage = "https://github.com/irfius/piranha"
repository = "repository"
authors = ["irfius <irfius@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
